[bugfix] Fix the paths for the Cache on AppVeyor CI See https://help.appveyor.com/discussions/problems/23597-java-windows-build-takes-over-1-hour-and-fails-linux-build-takes-20-mins

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,5 +37,5 @@ artifacts:
     name: test-logs
 
 cache:
-  - C:\Users\appveryor\.m2
-  - /home/appveyor/.m2
+  - '%USERPROFILE%\.m2'
+  - '$HOME/.m2'
