--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,3 +39,6 @@ artifacts:
 cache:
   - '%USERPROFILE%\.m2'
   - '$HOME/.m2'
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
