--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,17 +6,17 @@ environment:
       JAVA_HOME: C:\Program Files\Java\jdk1.8.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       JAVA_HOME: C:\Program Files\Java\jdk11
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
-      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
-      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+    #- APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
+     # JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+    #- APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
+     # JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
 
 build_script:
-  - cmd: mvn -T 2C -DskipTests=true -Dmaven.javadoc.skip=true -Ddocker=false install -B -V -q
+  - cmd: mvn -T 1C -DskipTests=true -Dmaven.javadoc.skip=true -Ddocker=false install -B -V -q
   - sh: mvn -T 2C -DskipTests=true -Dmaven.javadoc.skip=true -Ddocker=true install -B -V
 
 test_script:
-  - cmd: mvn -T 2C -Ddocker=false test -B -q
+  - cmd: mvn -T 1C -Ddocker=false test -B -q
   - sh: mvn -T 2C -Ddocker=true test -B
 
 after_test:
